--- a/index.html
+++ b/index.html
@@ -3,34 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>3D Debug iPhone Final</title>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/examples/js/loaders/GLTFLoader.js"></script>
+    <title>3D Integration</title>
     <style>
         body { margin: 0; overflow: hidden; background: #111; font-family: sans-serif; color: white; }
         #debug-log {
-            position: fixed; top: 10px; left: 10px; width: 60%; max-height: 40vh;
-            background: rgba(0,0,0,0.8); color: #0f0; font-size: 10px;
-            padding: 5px; overflow-y: auto; z-index: 1000; border: 1px solid #333;
-        }
-        #anim-list {
-            position: fixed; top: 10px; right: 10px; width: 35%;
-            background: rgba(255,255,255,0.1); padding: 5px; z-index: 1000;
-        }
-        .anim-btn {
-            display: block; width: 100%; margin-bottom: 5px; padding: 10px 2px;
-            background: #444; color: white; border: none; font-size: 10px; border-radius: 4px;
+            position: fixed; top: 10px; left: 10px; width: 80%; max-height: 40vh;
+            background: rgba(0,0,0,0.8); color: #0f0; font-size: 11px;
+            padding: 8px; overflow-y: auto; z-index: 1000; border: 1px solid #333;
         }
     </style>
 </head>
 <body>
     <div id="debug-log">Log: Initializing...</div>
-    <div id="anim-list">Anim List:</div>
 
-    <script>
+    <script type="importmap">
+    {
+        "imports": {
+            "three": "https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.module.js",
+            "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.160.0/examples/jsm/"
+        }
+    }
+    </script>
+
+    <script type="module">
+        import * as THREE from 'three';
+        import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
+
         const logEl = document.getElementById('debug-log');
-        const animListEl = document.getElementById('anim-list');
-
         function debug(msg, isError = false) {
             const div = document.createElement('div');
             div.style.color = isError ? '#ff4444' : '#0f0';
@@ -39,78 +38,59 @@
             logEl.scrollTop = logEl.scrollHeight;
         }
 
-        // ページが完全に読み込まれてから開始する（iPhone対策）
-        window.onload = function() {
-            debug("Page Loaded. Starting JS...");
+        debug("JS Module Loaded.");
 
-            try {
-                // 1. Loaderの存在確認
-                let loader;
-                if (typeof THREE.GLTFLoader === 'function') {
-                    loader = new THREE.GLTFLoader();
-                    debug("THREE.GLTFLoader Found.");
-                } else if (typeof GLTFLoader === 'function') {
-                    loader = new GLTFLoader();
-                    debug("Global GLTFLoader Found.");
-                } else {
-                    throw new Error("GLTFLoader not found in any scope.");
-                }
+        try {
+            // シーン設定
+            const scene = new THREE.Scene();
+            scene.background = new THREE.Color(0x333333);
+            const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+            camera.position.set(0, 2, 5);
+            const renderer = new THREE.WebGLRenderer({ antialias: true });
+            renderer.setSize(window.innerWidth, window.innerHeight);
+            renderer.setPixelRatio(window.devicePixelRatio);
+            document.body.appendChild(renderer.domElement);
 
-                // --- Scene Setup ---
-                const scene = new THREE.Scene();
-                scene.background = new THREE.Color(0x222222);
+            scene.add(new THREE.AmbientLight(0xffffff, 2));
 
-                const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-                camera.position.set(0, 2, 5);
+            const loader = new GLTFLoader();
+            let mixer;
 
-                const renderer = new THREE.WebGLRenderer({ antialias: true });
-                renderer.setSize(window.innerWidth, window.innerHeight);
-                renderer.setPixelRatio(window.devicePixelRatio);
-                document.body.appendChild(renderer.domElement);
+            // 統合のテスト：キャラとアニメを別々に読み込んで合体させる
+            debug("Loading Character...");
+            loader.load('public/Mannequin_Medium.glb', (gltf) => {
+                const model = gltf.scene;
+                scene.add(model);
+                debug("SUCCESS: Character OK");
 
-                scene.add(new THREE.AmbientLight(0xffffff, 2));
+                debug("Loading Animation...");
+                loader.load('public/UAL2_Standard.glb', (animGltf) => {
+                    mixer = new THREE.AnimationMixer(model);
+                    
+                    // アニメーションを流し込む
+                    if (animGltf.animations.length > 0) {
+                        const action = mixer.clipAction(animGltf.animations[0]);
+                        action.play();
+                        debug("SUCCESS: Animation Integrated!");
+                    } else {
+                        debug("WARNING: No anims in file", true);
+                    }
+                }, undefined, (e) => debug("Anim Error: " + e.message, true));
 
-                let mixer;
-                debug("Loading: public/Mannequin_Medium.glb");
+            }, undefined, (e) => debug("Model Error: " + e.message, true));
 
-                loader.load('./public/Mannequin_Medium.glb', function(gltf) {
-                    scene.add(gltf.scene);
-                    debug("SUCCESS: Model Loaded");
-
-                    loader.load('./public/UAL2_Standard.glb', function(animGltf) {
-                        debug("SUCCESS: Anims Found (" + animGltf.animations.length + ")");
-                        mixer = new THREE.AnimationMixer(gltf.scene);
-
-                        animGltf.animations.forEach(function(clip) {
-                            const btn = document.createElement('button');
-                            btn.className = 'anim-btn';
-                            btn.innerText = clip.name;
-                            btn.onclick = function() {
-                                mixer.stopAllAction();
-                                mixer.clipAction(clip).play();
-                                debug("Play: " + clip.name);
-                            };
-                            animListEl.appendChild(btn);
-                        });
-                    }, undefined, function(e) { debug("Anim Load Error", true); });
-
-                }, undefined, function(e) { 
-                    debug("Model Load Error. Check path/filename.", true); 
-                });
-
-                const clock = new THREE.Clock();
-                function animate() {
-                    requestAnimationFrame(animate);
-                    if (mixer) mixer.update(clock.getDelta());
-                    renderer.render(scene, camera);
-                }
-                animate();
-                debug("Render Loop Active.");
-
-            } catch (err) {
-                debug("Critical Error: " + err.message, true);
+            const clock = new THREE.Clock();
+            function animate() {
+                requestAnimationFrame(animate);
+                if (mixer) mixer.update(clock.getDelta());
+                renderer.render(scene, camera);
             }
-        };
+            animate();
+            debug("Render Loop Started.");
+
+        } catch (e) {
+            debug("Critical Error: " + e.message, true);
+        }
     </script>
 </body>
 </html>
