--- a/index.html
+++ b/index.html
@@ -16,18 +16,14 @@
     </style>
 </head>
 <body>
-    <div id="overlay">CLICK TO START<br>(E 2度押しでダッシュ / Escで解除)</div>
+    <div id="overlay">CLICK TO START<br>(E: Run / Q,C,S: Walk / Space: Jump)</div>
 
     <script>
         let scene, camera, renderer, clock, mixer, model;
         let moveState = { q: false, e: false, c: false, s: false };
-        let velocityY = 0, isJumping = false;
+        let velocityY = 0, isJumping = false, canJump = true; // ジャンプ管理
         let actions = {}, currentAction;
         let cameraAzimuth = 0, cameraElevation = 0.2;
-
-        // Eキーのダブルタップ判定用
-        let lastETime = 0;
-        let isSprinting = false;
 
         function fadeToAction(name, duration = 0.2) {
             const nextAction = actions[name];
@@ -83,7 +79,6 @@
                                 action.clampWhenFinished = true;
                             }
                         });
-                        // 優先順位をつけて初期待機を設定
                         if (actions['idle']) fadeToAction('idle');
                     });
                 });
@@ -97,22 +92,14 @@
             });
 
             window.onkeydown = (e) => {
+                if (e.repeat) return; // 【修正】キー長押しによる連続入力を無視
                 const k = e.key.toLowerCase();
                 if (['e','s','q','c'].includes(k)) moveState[k] = true;
 
-                // Eキーのダブルタップ判定
-                if (k === 'e') {
-                    const currentTime = new Date().getTime();
-                    if (currentTime - lastETime < 300) {
-                        isSprinting = true; // 2度押しでダッシュ
-                    } else {
-                        isSprinting = false; // 通常歩き
-                    }
-                    lastETime = currentTime;
-                }
-
-                if (k === ' ' && !isJumping) { 
-                    isJumping = true; 
+                // 【修正】ジャンプ可否判定（クールタイム中または空中なら不可）
+                if (k === ' ' && !isJumping && canJump) { 
+                    isJumping = true;
+                    canJump = false; 
                     velocityY = 0.18; 
                     fadeToAction('jump_start', 0.1);
                 }
@@ -121,7 +108,6 @@
             window.onkeyup = (e) => {
                 const k = e.key.toLowerCase();
                 if (['e','s','q','c'].includes(k)) moveState[k] = false;
-                if (k === 'e') isSprinting = false; // Eを離したらダッシュ解除
             };
 
             clock = new THREE.Clock();
@@ -147,22 +133,22 @@
                         while (diff > Math.PI) diff -= Math.PI * 2;
                         model.rotation.y += diff * 0.15;
 
-                        // 速度とアニメーションの切り替え
-                        let speed = isSprinting ? 0.14 : 0.07;
+                        // 【仕様変更】E（前進）のみの入力、かつ他が押されていない場合は走り、それ以外は歩き
+                        const onlyForward = (moveState.e && !moveState.s && !moveState.q && !moveState.c);
+                        let speed = onlyForward ? 0.14 : 0.07;
+                        
                         model.position.x += Math.sin(model.rotation.y) * speed;
                         model.position.z += Math.cos(model.rotation.y) * speed;
 
-                        // ★空中でない時だけ移動アニメーションを再生
+                        // 【修正】空中でない時のみ移動アニメ再生
                         if (!isJumping) {
-                            if (isSprinting) fadeToAction('run', 0.2); 
+                            if (onlyForward) fadeToAction('run', 0.2); 
                             else fadeToAction('walk', 0.2);
                         }
                     } else {
-                        // ★空中でない時だけ待機アニメーションを再生
                         if (!isJumping) fadeToAction('idle', 0.2);
                     }
 
-                    // ジャンプ/空中ロジック
                     if (isJumping) {
                         model.position.y += velocityY;
                         velocityY -= 0.008;
@@ -176,14 +162,16 @@
                             isJumping = false;
                             fadeToAction('jump_land', 0.1);
                             
+                            // 【修正】着地から0.5秒後に再度ジャンプ可能にする
                             setTimeout(() => {
+                                canJump = true;
                                 if (isMoving) {
-                                    if (isSprinting) fadeToAction('run', 0.2);
-                                    else fadeToAction('walk', 0.2);
+                                    const onlyForward = (moveState.e && !moveState.s && !moveState.q && !moveState.c);
+                                    fadeToAction(onlyForward ? 'run' : 'walk', 0.2);
                                 } else {
                                     fadeToAction('idle', 0.2);
                                 }
-                            }, 200);
+                            }, 500);
                         }
                     }
 
