--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
             color: white; background: rgba(0,0,0,0.7); padding: 25px; border-radius: 12px;
             text-align: center; pointer-events: none; z-index: 200; font-weight: bold;
         }
+        #status { position: fixed; bottom: 20px; left: 20px; color: white; background: rgba(0,0,0,0.5); padding: 10px; border-radius: 5px; font-size: 14px; pointer-events: none; }
     </style>
 </head>
 <body>
-    <div id="overlay">CLICK TO START<br>(E: Run / Q,C,S: Walk / Space: Jump)</div>
+    <div id="overlay">CLICK TO START<br>(V: しゃがみ切替 / E,S,Q,C: 移動 / Space: Jump)</div>
+    <div id="status">Mode: Standing</div>
 
     <script>
         let scene, camera, renderer, clock, mixer, model;
         let moveState = { q: false, e: false, c: false, s: false };
-        let velocityY = 0, isJumping = false, canJump = true; // ジャンプ管理
+        let velocityY = 0, isJumping = false, canJump = true;
+        let isCrouching = false; // しゃがみ状態のトグル管理
         let actions = {}, currentAction;
         let cameraAzimuth = 0, cameraElevation = 0.2;
 
@@ -59,7 +62,8 @@
 
                 ['./a.glb', './b.glb'].forEach(url => {
                     loader.load(url, (animGltf) => {
-                        animGltf.animations.forEach((clip) => {
+                        const anims = animGltf.animations;
+                        anims.forEach((clip, index) => {
                             clip.tracks = clip.tracks.filter(t => !t.name.endsWith('.position'));
                             const action = mixer.clipAction(clip);
                             const name = clip.name;
@@ -67,16 +71,13 @@
                             if (name === 'Idle_Loop') actions['idle'] = action;
                             if (name === 'Walk_Loop') actions['walk'] = action;
                             if (name === 'Sprint_Loop') actions['run'] = action;
-                            if (name === 'Jump_Start') {
-                                actions['jump_start'] = action;
-                                action.setLoop(THREE.LoopOnce);
-                                action.clampWhenFinished = true;
-                            }
+                            if (name === 'Jump_Start') { actions['jump_start'] = action; action.setLoop(THREE.LoopOnce); action.clampWhenFinished = true; }
                             if (name === 'Jump_Loop') actions['jump_loop'] = action;
-                            if (name === 'Jump_Land') {
-                                actions['jump_land'] = action;
-                                action.setLoop(THREE.LoopOnce);
-                                action.clampWhenFinished = true;
+                            if (name === 'Jump_Land') { actions['jump_land'] = action; action.setLoop(THREE.LoopOnce); action.clampWhenFinished = true; }
+
+                            if (url === './b.glb') {
+                                if (index === 1) actions['crouch_walk'] = action;
+                                if (index === 2) actions['crouch_idle'] = action;
                             }
                         });
                         if (actions['idle']) fadeToAction('idle');
@@ -92,11 +93,16 @@
             });
 
             window.onkeydown = (e) => {
-                if (e.repeat) return; // 【修正】キー長押しによる連続入力を無視
+                if (e.repeat) return;
                 const k = e.key.toLowerCase();
                 if (['e','s','q','c'].includes(k)) moveState[k] = true;
 
-                // 【修正】ジャンプ可否判定（クールタイム中または空中なら不可）
+                // Vキーでしゃがみトグル
+                if (k === 'v') {
+                    isCrouching = !isCrouching;
+                    document.getElementById('status').innerText = isCrouching ? "Mode: Crouching" : "Mode: Standing";
+                }
+
                 if (k === ' ' && !isJumping && canJump) { 
                     isJumping = true;
                     canJump = false; 
@@ -122,7 +128,7 @@
                     if (moveState.e) inputZ -= 1;
                     if (moveState.s) inputZ += 1;
                     if (moveState.q) inputX -= 1;
-                    if (moveState.c) inputX += 1;
+                    if (moveState.c) inputX += 1; // Cキーで右移動
 
                     const isMoving = (inputX !== 0 || inputZ !== 0);
 
@@ -133,45 +139,38 @@
                         while (diff > Math.PI) diff -= Math.PI * 2;
                         model.rotation.y += diff * 0.15;
 
-                        // 【仕様変更】E（前進）のみの入力、かつ他が押されていない場合は走り、それ以外は歩き
+                        // 速度計算：しゃがみ中は常に歩き速度
                         const onlyForward = (moveState.e && !moveState.s && !moveState.q && !moveState.c);
-                        let speed = onlyForward ? 0.14 : 0.07;
+                        let speed = (onlyForward && !isCrouching) ? 0.14 : 0.07;
                         
                         model.position.x += Math.sin(model.rotation.y) * speed;
                         model.position.z += Math.cos(model.rotation.y) * speed;
 
-                        // 【修正】空中でない時のみ移動アニメ再生
                         if (!isJumping) {
-                            if (onlyForward) fadeToAction('run', 0.2); 
+                            if (isCrouching) fadeToAction('crouch_walk', 0.2);
+                            else if (onlyForward) fadeToAction('run', 0.2); 
                             else fadeToAction('walk', 0.2);
                         }
                     } else {
-                        if (!isJumping) fadeToAction('idle', 0.2);
+                        if (!isJumping) {
+                            fadeToAction(isCrouching ? 'crouch_idle' : 'idle', 0.2);
+                        }
                     }
 
                     if (isJumping) {
                         model.position.y += velocityY;
                         velocityY -= 0.008;
-
-                        if (velocityY < 0 && currentAction === actions['jump_start']) {
-                            fadeToAction('jump_loop', 0.3);
-                        }
+                        if (velocityY < 0 && currentAction === actions['jump_start']) fadeToAction('jump_loop', 0.3);
 
                         if (model.position.y <= 0) {
                             model.position.y = 0;
                             isJumping = false;
                             fadeToAction('jump_land', 0.1);
-                            
-                            // 【修正】着地から0.5秒後に再度ジャンプ可能にする
                             setTimeout(() => {
                                 canJump = true;
-                                if (isMoving) {
-                                    const onlyForward = (moveState.e && !moveState.s && !moveState.q && !moveState.c);
-                                    fadeToAction(onlyForward ? 'run' : 'walk', 0.2);
-                                } else {
-                                    fadeToAction('idle', 0.2);
-                                }
-                            }, 500);
+                                if (isMoving) fadeToAction(isCrouching ? 'crouch_walk' : (moveState.e ? 'run' : 'walk'), 0.2);
+                                else fadeToAction(isCrouching ? 'crouch_idle' : 'idle', 0.2);
+                            }, 300);
                         }
                     }
 
